force-app/main/default/objects/Account/fields/Applicant_Skill__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant Skill</label>
    <referenceTo>Applicant_Skill__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>