force-app/main/default/objects/Account/fields/Company_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>Company_LinkedIn__c</fullName>
    <label>Company LinkedIn</label>
    <type>Url</type>
</CustomField>