force-app/main/default/objects/Account/fields/Credit_Review__c.field-meta.xml
<CustomField>
    <fullName>Credit_Review__c</fullName>
    <label>Credit Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>