force-app/main/default/objects/Account/recordTypes/Clients.recordType-meta.xml
<RecordType>
    <fullName>Clients</fullName>
    <active>true</active>
    <label>Clients</label>
</RecordType>